@@ -58,8 +58,6 @@
 
 #include "des_locl.h"
 
-#ifndef OPENSSL_FIPS
-
 void DES_encrypt1(DES_LONG *data, DES_key_schedule *ks, int enc)
 	{
 	register DES_LONG l,r,t,u;
@@ -288,8 +286,6 @@ void DES_decrypt3(DES_LONG *data, DES_key_schedule *ks1,
 	data[0]=l;
 	data[1]=r;
 	}
-
-#endif
 
 #ifndef DES_DEFAULT_OPTIONS
 
