@@ -64,18 +64,11 @@
 
 #include <openssl/opensslv.h>
 
-#ifndef OPENSSL_FIPS
 const char SHA1_version[]="SHA1" OPENSSL_VERSION_PTEXT;
 
 /* The implementation is in ../md32_common.h */
 
 #include "sha_locl.h"
-
-#else
-
-static void *dummy=&dummy;
-
-#endif
 
 #endif
 
